# sexy-raytracer

./: .gitmodules  CMakeLists.txt  README.md  aabb.h  bvh.h  camera.h  color.h  compute.h  gl.cpp  gl.h  globals.cpp  globals.h  gltf.h  hittable.h  hittableindexed.h  hittablelist.h  hittablevector.h  main.cpp  material.h  model.h  pbr.h  ray.h  rtpstbimage.h  sphere.h  srtstbimage.h  texture.h  vec3.h
data/: halo.glb  masterchief-sep.gltf  masterchief.glb  masterchief.gltf  masterchief2-separate-xf.gltf  masterchief2-separate.gltf  masterchief2.gltf  scene.gltf  square.gltf
shaders/: compute.glsl  fs.glsl  rtFrameFS.glsl  rtframe-vs.glsl  vs.glsl
